--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
     <div class="cv-container">
       <div class="left-column">
-        <img class="portait" src="C:/Users/geofd/OneDrive/Pictures/photo identité.jpg" />
+        <img class="portait" src="photo identité.jpg" />
         <div class="section">
           <p>
             <i class="icon fab fa-linkedin text-darkred"></i> geoffrey-dureau
